--- a/terms.html
+++ b/terms.html
@@ -65,104 +65,94 @@
 <body class="bg-white">
   <div class="flex flex-col min-h-screen justify-between">
     <div class="grow flex flex-col">
-      <nav id="main-nav" class="flex items-center justify-between p-6 lg:px-8 transition-all duration-300" aria-label="Global">
+      <!-- NAVBAR -->
+        <nav id="main-nav" class="flex items-center justify-between p-6 lg:px-8 transition-all duration-300" aria-label="Global">
         <div class="flex lg:flex-1">
-          <a class="-m-1.5 p-1.5" href="/">
-            <span class="text-2xl font-bold logo-text">Uzo</span> <!-- Changed to black -->
-          </a>
+        <a href="/" class="-m-1.5 p-1.5"><span class="text-2xl font-bold logo-text">Uzo</span></a>
         </div>
+
+        <!-- Mobile menu button -->
         <div class="flex lg:hidden">
-          <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
-            <span class="sr-only">Open main menu</span>
-            <img class="h-6 w-6" aria-hidden="true" alt="menu" src="images/menu.svg">
-          </button>
+        <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
+        <span class="sr-only">Open main menu</span>
+        <img class="h-6 w-6" src="images/menu.svg" alt="menu">
+        </button>
         </div>
-        <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-lightgrey">
-          <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="index.html" id="home-link">Home</a>
-          <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="pricing.html" id="pricing-link">Pricing</a>
-          <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="faq.html" id="faq-link">FAQ</a>
-          <a class="nav-link text-sm leading-6 text-gray-600 font-bold transition duration-300" href="contact.html" id="contact-link">Contact Us</a>
+
+
+        <!-- Desktop links -->
+        <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-gray-300">
+        <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="index.html" id="home-link">Home</a>
+        <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="pricing.html" id="pricing-link">Pricing</a>
+        <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="faq.html" id="faq-link">FAQ</a>
+        <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="contact.html" id="contact-link">Contact Us</a>
         </div>
+
         <div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center ml-6">
-          <a class="text-md text-orange-400 font-bold" href="https://app.uzoussd.com/app/login">Log in</a>
-          <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a> <!-- Text remains white -->
+        <a class="text-md text-orange-400 font-bold" href="https://app.uzoussd.com/app/login">Log in</a>
+        <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a>
         </div>
-      </nav>
+        </nav>
 
-      <!-- Desktop links -->
-<div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center pr-6 border-r border-gray-300">
-  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="index.html" id="home-link">Home</a>
-  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="pricing.html" id="pricing-link">Pricing</a>
-  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="faq.html" id="faq-link">FAQ</a>
-  <a class="nav-link text-sm leading-6 text-gray-600 font-bold" href="contact.html" id="contact-link">Contact Us</a>
-</div>
+        <!-- Mobile Menu (Hidden by default) -->
+        <div id="mobile-menu" class="hidden lg:hidden absolute top-20 left-0 right-0 px-4 py-4 bg-white w-full flex flex-col shadow-lg z-50">
+        <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="index.html">Home</a>
+        <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="">Pricing</a>
+        <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="faq.html">FAQ</a>
+        <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="contact.html">Contact Us</a>
+        </div>
 
-<div class="hidden lg:flex lg:gap-x-8 lg:justify-end items-center ml-6">
-  <a class="text-md text-orange-400 font-bold" href="https://app.uzoussd.com/app/login">Log in</a>
-  <a class="rounded-full bg-orange-400 text-white px-6 py-2 border drop-shadow font-bold" href="https://app.uzoussd.com/app/register">Get Started</a>
-</div>
-</nav>
+        <script>
+        // Mobile menu toggle
+        const menuButton = document.querySelector('button[type="button"]');
+        const mobileMenu = document.getElementById('mobile-menu');
 
-<!-- Mobile Menu (Hidden by default) -->
-<div id="mobile-menu" class="hidden lg:hidden absolute top-20 left-0 right-0 px-4 py-4 bg-white w-full flex flex-col shadow-lg z-50">
-  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="index.html">Home</a>
-  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="pricing.html">Pricing</a>
-  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="faq.html">FAQ</a>
-  <a class="text-sm leading-6 text-gray-700 font-bold py-4 hover:text-orange-400 transition" href="contact.html">Contact Us</a>
-</div>
+        if (menuButton && mobileMenu) {
+        menuButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+        });
+        }
+        </script>
 
-<script>
-  // Mobile menu toggle
-  const menuButton = document.querySelector('button[type="button"]');
-  const mobileMenu = document.getElementById('mobile-menu');
-  
-  if (menuButton && mobileMenu) {
-    menuButton.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
-  }
-</script>
-
-      <!-- JavaScript for scroll detection and active link -->
-      <script>
+        <!-- JavaScript for scroll detection and active link -->
+        <script>
         // Scroll detection
         window.addEventListener('scroll', () => {
-          const nav = document.getElementById('main-nav');
-          if (window.scrollY > 50) {
-            nav.classList.add('navbar-sticky');
-          } else {
-            nav.classList.remove('navbar-sticky');
-          }
+        const nav = document.getElementById('main-nav');
+        if (window.scrollY > 50) {
+        nav.classList.add('navbar-sticky');
+        } else {
+        nav.classList.remove('navbar-sticky');
+        }
         });
 
         // Set active link based on current page
         document.addEventListener('DOMContentLoaded', () => {
-          const currentPage = window.location.pathname.split('/').pop() || 'index.html';
-          console.log('Current page detected:', currentPage);
-          const links = {
-            'index.html': document.getElementById('home-link'),
-            'pricing.html': document.getElementById('pricing-link'),
-            'faq.html': document.getElementById('faq-link'),
-            'contact.html': document.getElementById('contact-link')
-          };
+        const currentPage = window.location.pathname.split('/').pop() || 'index.html';
+        console.log('Current page detected:', currentPage);
+        const links = {
+        'index.html': document.getElementById('home-link'),
+        'pricing.html': document.getElementById('pricing-link'),
+        'faq.html': document.getElementById('faq-link'),
+        'contact.html': document.getElementById('contact-link')
+        };
 
-          for (const [page, link] of Object.entries(links)) {
-            if (page === currentPage) {
-              if (link) {
-                link.classList.add('active');
-                console.log('Active link set to:', link.textContent);
-              } else {
-                console.error('Link not found for page:', page);
-              }
-              break;
-            }
-          }
+        for (const [page, link] of Object.entries(links)) {
+        if (page === currentPage) {
+        if (link) {
+        link.classList.add('active');
+        console.log('Active link set to:', link.textContent);
+        } else {
+        console.error('Link not found for page:', page);
+        }
+        break;
+        }
+        }
         });
-      </script>
-
+        </script>
+        
      <iframe class="h-screen" title="Terms and Conditions" src="https://docs.google.com/document/d/1LO06JVQfrCWzyBC0XL_vEe77JDchrt4yibXUDTSi2rw/pub?embedded=true"></iframe>
 
-    <!-- ==================== FOOTER ==================== -->
     <!-- FOOTER -->
     <footer class="py-16 bg-[#242424]">
       <div class="flex flex-col md:flex-row items-center md:items-start ml-4 md:ml-12">
